# homelab-dashboard

./: .gitignore  README.md  requirements.txt
backend/: collector.py  docker_health.py
backend/app/: collector.py  docker_health.py  main.py  pyproject.toml
backend/app/collectors/: collector.py  docker_health.py
backend/app/models/: container_response_model.py  metric_response_model.py
backend/app/routes/: api.py  serve_page.py  ws.py
backend/output/: docker_info.json  test.json
web/: container_status_page.html  home.html  metric_page.html
