[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "homelab_dashboard"
version = "0.0.1"
description = "Best homelab dashboard"
authors = [
    { name="Ramz", email="ramz@fulcrum.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = []